--- a/circuits_log.tex
+++ b/circuits_log.tex
@@ -412,6 +412,7 @@ l'Oeuvre modifiée avec la même licence.
 
 Pour citer cet ouvrage: Bégin, G. (2022), Circuits logiques
 combinatoires et séquentiels. Université du Québec à Montréal. Licence CC BY-SA
+\url{https://doi.org/10.5281/zenodo.10817916}
 
 \begin{center}
 \href{https://uqam.ca/}{\includesvg[width=0.35\linewidth]{Logo_UQAM}} 
